--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,8 @@
         <servlet-name>spring</servlet-name>
         <url-pattern>/registration/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/profile/*</url-pattern>
+    </servlet-mapping>
 </web-app>
