--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,4 +53,8 @@
         <servlet-name>spring</servlet-name>
         <url-pattern>/subject/*</url-pattern>
     </servlet-mapping>   
+    <servlet-mapping>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/chatting/*</url-pattern>
+    </servlet-mapping>  
 </web-app>
