--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,5 +56,9 @@
     <servlet-mapping>
         <servlet-name>spring</servlet-name>
         <url-pattern>/chatting/*</url-pattern>
+    </servlet-mapping>     
+    <servlet-mapping>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/admin/*</url-pattern>
     </servlet-mapping>  
 </web-app>
